@@ -6,14 +6,16 @@ AUX zvbi-0.2.33-libpng15.patch 543 SHA256 d58e55d38fcd9e34b69c69249888070080dcd4
 AUX zvbi-0.2.34-settime.patch 394 SHA256 aaf3c627d4343579a0736b48f34ad2a8e28c410b459fd2c1a83df5f9d856356b SHA512 d4fe30cfd979da546096b1b53c7af2f2f0aefe4c4f7a7d245773e89263ff5b1ad5217f17c2b3676bf7d690e73c5f1dd01a31a06d9993ae3d583c89f51f3ab3f1 WHIRLPOOL 76c10d7bd84fe1b53ae9b5cb886646311f08fdc2b39a68cdcdf2b2c8147626e214036e9c0d5763c5029cb32f380aa61d76c11b805eaf5c333f577167b09c4cb8
 DIST zvbi-0.2.33.tar.bz2 935601 SHA256 09a709f6de5f42e7039cca2732a6ea211a397bb666b9110ee52658603be4fb7e SHA512 aa89de27e0e939279fa072fdc32ed1ab0f07ab15f8e3404613eb331f433dad458c0d3e028a18c6ede54b37c0a8f477e363f07828b6200bafcbb862ca29fa271b WHIRLPOOL 4968cc8b03b4516f9e7c1fa65438f96371294070998fc141dc7aff5da4084718c2f1d163e1486f5093f7f652289c60f715561c657b047e4a3cdd17c3db2cb9e6
 DIST zvbi-0.2.34.tar.bz2 1046741 SHA256 29cfbb7ee1981e4553670d0dc4e079d192fd5f5d85f07e49795be55a600c6dab SHA512 838d1dd6a0c16ebe3e7ba0ab905d38842dee2f08742752cf2f470195dad8880b898d8fd530d27fab99b01def551a31ad97e4c29877def77cf88a048e0cc79a51 WHIRLPOOL 13c1c0b910f7bc27eb4d48a9821d153e696b31c8d06279ef6a1de9d702145e1b705efee498e763016fc93cdc4ae8c62dd221b9e381ebe5b8a74c7b8295f1dc1a
+DIST zvbi-0.2.35.tar.bz2 1047761 SHA256 fc883c34111a487c4a783f91b1b2bb5610d8d8e58dcba80c7ab31e67e4765318 SHA512 3d73eb0a7d05fdf1e3f8a74cc9d4fcb2a0287285904d59230c832f42b91afb072e96bda7e396ef07f268348061a51242925746db124bbb713cf56bdfabdada5d WHIRLPOOL e365d28db9834a5e9f8780d45f9fcb04c7b98e5a3122fe81336a42bb2de54505583a535908cabc0851b6753f589b758bf1d6e2831c88cfbeba9fe8d0633a42f0
 EBUILD zvbi-0.2.33.ebuild 1272 SHA256 fa96e44e39113d4cc111f358a3ccee2dee05ec5b490592eb455252a76d5d3a93 SHA512 f33b8e285dc30dcd0d0b3f7335768c000e7367ca883ce9d336e4c65095be633624b08a49622383403fa9dd9f65b93488b62ade27183211cd01327a709831d834 WHIRLPOOL 26512e32daf2b7e81b22dd4614b2f63a819bb87d2ad67acbec409b690f361c3818af18efc5db905f49cbf6796dabc50f7d0e15c5d983ff78c909746a3496dafd
 EBUILD zvbi-0.2.34.ebuild 1194 SHA256 28705bc15e923d1f95a4fa3132a48fce81998433cf8d07477eb48500d3724d51 SHA512 43f02c138e143be8d0ffe4f980a3368df39566ee9f3afd51b16d7ddf96a3cbf86bcdf6a00556c02d8e6ad351c5314afe54abbbb299cc8ae5c94f05136d6bdd39 WHIRLPOOL 863a2d472476d17b83905d0d92e0d61937857d961ce3cacb0d62530e9601eb12cc7700b76b78b2ef32b502db6f3dff6044108a8e98f4d6424f282d79da8f40ad
-MISC ChangeLog 5724 SHA256 87e2937aae28c7d11509fa589e0205917110535e0679e87c79ed7e08aec7d4d4 SHA512 3cab63dbeb4b3140924b32f6b383eeac812f09b5e11c8be0c798a8c2b3a9e972bd19221298592c1b4b72ea482789ab89aa757a4cd8a77fea9bf823d7f6dd41bd WHIRLPOOL 1778eb74d3576f244a2e821b053840b91e861addbf52404823ef7c5baa419d17746e0dfd9972eb679a20bd9234a0bd5976ff47ea174d841b39e445a6670ebc04
+EBUILD zvbi-0.2.35.ebuild 1153 SHA256 6c2d5ceeac145d5da83f5c9cab4c992406231c85d20b2f532dfbbdcd26ea0019 SHA512 64f500e051d14f55b8d692492033902371463ef44c7f83a9af1a3e47d36d3041ab4737bf720b8f961b997c499831c3fbfa1bab6f39089326c8678e2094b1ddce WHIRLPOOL 47a0c99e467f5d0e9444eb10bc9663927e13fdf35e548f84212bbbea0428de1535c0b3529fd41aa7e711687a3e637c9727b649f93b91d86aaf5dc29f213bfa04
+MISC ChangeLog 5841 SHA256 0f90bd3fc4e534795abe4271e6a811fc1ae044b44921eb0447dfee1d1dc59616 SHA512 94ee66efe77a33bd8a7d7777f77013d3904b7f725b3459cdf1d18722ec6638eb7df722b7945fe1283614e07bda9b633a50ec61568953b2cec1f65e8a591177e6 WHIRLPOOL 78f8e8fe4b3e8f614fffea097c8f80249f3fae1b7ba745d110dc812a386c5e6f4aa6dc6596aa33d69cf62c0a2e53aa5ef40f3ff5d8e76bee8c81c297b3e7c467
 MISC metadata.xml 288 SHA256 85f1a198e9f35e7711481a80743c3ffb7849924b2ef733168f4dad22798529dc SHA512 037448c367155788053ca6c7d527dc2d5ae7abd4a03aa58c902e5e82017d1b992a5bc620d78bd92fe338d807c311200ac7b47e4ce20a765a49629c063bbe9fd8 WHIRLPOOL 06e56cf6b47074b450b2b02eb58afb667aac9704a9b88a9b69dde7a9b7c19d683c0ea5e63f41ac424e1f4c816adc3dbb0cc169cfc636bababf5d86328535a23d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iEYEAREIAAYFAlID22kACgkQvFcC4BYPU0q/zACfXKczvrxQREvhGWTK8LsDjCds
-cDsAnA2wdciift1/kz1s+B50wtA97jox
-=sm41
+iEYEAREIAAYFAlI9yj8ACgkQvFcC4BYPU0oA5ACeKgzP4s0CwpjG6T9E6Pj4AW47
+U+cAoJcVOgc4YcWlAZSnLGE23xW5NUBO
+=mbxh
 -----END PGP SIGNATURE-----
