@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=>=media-libs/libpng-1.4 sys-libs/zlib nls? ( virtual/libintl ) X? ( x11-libs/libX11 ) virtual/os-headers doc? ( app-doc/doxygen ) nls? ( sys-devel/gettext ) X? ( x11-libs/libXt )
+DESCRIPTION=VBI Decoding Library for Zapping
+EAPI=5
+HOMEPAGE=http://zapping.sourceforge.net
+IUSE=doc dvb nls static-libs v4l X
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-fbsd ~x86-fbsd
+LICENSE=GPL-2 LGPL-2
+RDEPEND=>=media-libs/libpng-1.4 sys-libs/zlib nls? ( virtual/libintl ) X? ( x11-libs/libX11 )
+SLOT=0
+SRC_URI=mirror://sourceforge/zapping/zvbi-0.2.35.tar.bz2
+_eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=db93321045e0d4991b76bc189d0d0538
