@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8260 2013/09/20 17:30:59 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.8261 2013/09/21 17:00:55 kensington Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  21 Sep 2013; Michael Palimaka <kensington@gentoo.org>
+  targets/desktop/kde/package.use:
+  Enable xmp USE flag for media-gfx/exiv2 by default as it is required by
+  media-gfx/digikam.
 
   20 Sep 2013; Ian Stakenvicius <axs@gentoo.org>
   +default/linux/amd64/13.0/package.use.stable.mask:
